--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,18 +6,20 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- try different optimizer\n",
-    "- try different scheduler\n",
-    "- try downsample 3\n",
-    "- try duration 5728 or 5792\n",
-    "- try different gaussian kernel size (offset)\n",
-    "- try different bg_sampling_rate (negative element sampling) + FocalLoss\n",
-    "- try 10-fold scheme\n",
-    "- try another models\n",
-    "- use val score to select best model\n",
+    "- 10 fold scheme\n",
+    "- use 2x batch AND 2x LR\n",
+    "- select best weights for each train and average them (EMA)\n",
+    "- downsample 3\n",
+    "- duration 5728 or 5792\n",
+    "- different optimizer (Lion, Adam, SGD)\n",
+    "- different scheduler (CyclicLR - triangular2)\n",
+    "- different bg_sampling_rate (negative element sampling) + FocalLoss\n",
+    "- different encoders\n",
+    "- different decoders\n",
+    "- different models\n",
     "- add weeks or months\n",
-    "- different loss (Focal Loss, KL divergence)\n",
-    "- select best weights for each train and average them (like SWA)\n",
+    "- different loss (KL divergence)\n",
+    "- different seed (just for fun)\n",
     "- train different folds, build an ensemble of models\n",
     "- use stacking with ensemble"
    ]
@@ -74,7 +76,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"sun\"\n",
+    "EXP_NAME = \"monitor_score\"\n",
     "RUN_NAME = \"run0\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "\n",
@@ -101,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_148006/2157515774.py:31: UserWarning: \n",
+      "/tmp/ipykernel_125351/3433824584.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -134,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "0.723752814246102"
+       "0.7611746781185478"
       ]
      },
      "execution_count": 3,
