--- a/run/train.ipynb
+++ b/run/train.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.1.0+cu121'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "torch.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -107,22 +129,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x7f9d5b12ff70>"
+       "(2062, 5428)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "num_frames, duration, onset, wakeup, start = 2880, 5760, 280320, 287052, 276195\n",
+    "onset = int((onset - start) / duration * num_frames)\n",
+    "wakeup = int((wakeup - start) / duration * num_frames)\n",
+    "onset, wakeup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2880, 5760, 280320, 287052, 276195\n",
+      "\n",
+      "2880, 5760, 2062, 5428, 276195\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 349104, 356664, 352705\n",
+      "\n",
+      "2880, 5760, -1800, 1979, 352705\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 23040, 28152, 26086\n",
+      "\n",
+      "2880, 5760, -1522, 1033, 26086\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 405216, 410652, 404101\n",
+      "\n",
+      "2880, 5760, 557, 3275, 404101\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 314460, 321120, 316518\n",
+      "\n",
+      "2880, 5760, -1029, 2301, 316518\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 263424, 269856, 258163\n",
+      "\n",
+      "2880, 5760, 2630, 5846, 258163\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 108804, 116604, 115259\n",
+      "\n",
+      "2880, 5760, -3227, 672, 115259\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 8136, 13092, 8977\n",
+      "\n",
+      "2880, 5760, -420, 2057, 8977\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 320304, 327444, 321774\n",
+      "\n",
+      "2880, 5760, -735, 2835, 321774\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 8892, 14976, 3645\n",
+      "\n",
+      "2880, 5760, 2623, 5665, 3645\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 375744, 376860, 375647\n",
+      "\n",
+      "2880, 5760, 48, 606, 375647\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 145608, 152052, 143154\n",
+      "\n",
+      "2880, 5760, 1227, 4449, 143154\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 249252, 256860, 248362\n",
+      "\n",
+      "2880, 5760, 445, 4249, 248362\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 279132, 285204, 283554\n",
+      "\n",
+      "2880, 5760, -2211, 825, 283554\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 286800, 291624, 281708\n",
+      "\n",
+      "2880, 5760, 2546, 4958, 281708\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 106560, 112992, 110305\n",
+      "\n",
+      "2880, 5760, -1872, 1343, 110305\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 24252, 27624, 22910\n",
+      "\n",
+      "2880, 5760, 671, 2357, 22910\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 128700, 138000, 134942\n",
+      "\n",
+      "2880, 5760, -3121, 1528, 134942\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 300120, 307968, 298577\n",
+      "\n",
+      "2880, 5760, 771, 4695, 298577\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 350412, 356256, 350897\n",
+      "\n",
+      "2880, 5760, -242, 2679, 350897\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 42180, 48900, 39535\n",
+      "\n",
+      "2880, 5760, 1322, 4682, 39535\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 57960, 63480, 60341\n",
+      "\n",
+      "2880, 5760, -1190, 1569, 60341\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 127788, 134844, 131305\n",
+      "\n",
+      "2880, 5760, -1758, 1769, 131305\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 352968, 359364, 358348\n",
+      "\n",
+      "2880, 5760, -2690, 508, 358348\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 333960, 340008, 339886\n",
+      "\n",
+      "2880, 5760, -2963, 61, 339886\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 299052, 306132, 297444\n",
+      "\n",
+      "2880, 5760, 804, 4344, 297444\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 250020, 255624, 245251\n",
+      "\n",
+      "2880, 5760, 2384, 5186, 245251\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 162420, 168252, 167334\n",
+      "\n",
+      "2880, 5760, -2457, 458, 167334\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 457236, 462324, 452563\n",
+      "\n",
+      "2880, 5760, 2336, 4880, 452563\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 74688, 80232, 73238\n",
+      "\n",
+      "2880, 5760, 725, 3497, 73238\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 7464, 13356, 3784\n",
+      "\n",
+      "2880, 5760, 1839, 4786, 3784\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 338328, 343212, 332912\n",
+      "\n",
+      "2880, 5760, 2708, 5150, 332912\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 231648, 238092, 236989\n",
+      "\n",
+      "2880, 5760, -2670, 551, 236989\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 179280, 186348, 176345\n",
+      "\n",
+      "2880, 5760, 1467, 5001, 176345\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 24312, 30996, 26525\n",
+      "\n",
+      "2880, 5760, -1106, 2235, 26525\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 211584, 217488, 215650\n",
+      "\n",
+      "2880, 5760, -2033, 918, 215650\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 298788, 304776, 300227\n",
+      "\n",
+      "2880, 5760, -719, 2274, 300227\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 73932, 81900, 74837\n",
+      "\n",
+      "2880, 5760, -452, 3531, 74837\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 145272, 151524, 143118\n",
+      "\n",
+      "2880, 5760, 1077, 4203, 143118\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 142416, 149160, 139035\n",
+      "\n",
+      "2880, 5760, 1690, 5062, 139035\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 332436, 339264, 328087\n",
+      "\n",
+      "2880, 5760, 2174, 5588, 328087\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 61128, 67524, 63590\n",
+      "\n",
+      "2880, 5760, -1231, 1967, 63590\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 144180, 151500, 141814\n",
+      "\n",
+      "2880, 5760, 1183, 4843, 141814\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 148092, 155412, 142646\n",
+      "\n",
+      "2880, 5760, 2723, 6383, 142646\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 233616, 239028, 238057\n",
+      "\n",
+      "2880, 5760, -2220, 485, 238057\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 180444, 186156, 176676\n",
+      "\n",
+      "2880, 5760, 1884, 4740, 176676\n",
+      "\n",
+      "=============\n",
+      "\n",
+      "2880, 5760, 354960, 360360, 351421\n",
+      "\n",
+      "2880, 5760, 1769, 4469, 351421\n",
+      "\n",
+      "=============\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7f0638b77370>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/alex/Kaggle/DSS/.venv/lib/python3.10/site-packages/torch/utils/data/dataloader.py\", line 1478, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/alex/Kaggle/DSS/.venv/lib/python3.10/site-packages/torch/utils/data/dataloader.py\", line 1442, in _shutdown_workers\n",
+      "    w.join(timeout=_utils.MP_STATUS_CHECK_INTERVAL)\n",
+      "  File \"/home/alex/.rye/py/cpython@3.10.11/install/lib/python3.10/multiprocessing/process.py\", line 149, in join\n",
+      "    res = self._popen.wait(timeout)\n",
+      "  File \"/home/alex/.rye/py/cpython@3.10.11/install/lib/python3.10/multiprocessing/popen_fork.py\", line 40, in wait\n",
+      "    if not wait([self.sentinel], timeout):\n",
+      "  File \"/home/alex/.rye/py/cpython@3.10.11/install/lib/python3.10/multiprocessing/connection.py\", line 931, in wait\n",
+      "    ready = selector.select(timeout)\n",
+      "  File \"/home/alex/.rye/py/cpython@3.10.11/install/lib/python3.10/selectors.py\", line 416, in select\n",
+      "    fd_event_list = self._selector.poll(timeout)\n",
+      "KeyboardInterrupt: \n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = None\n",
+    "\n",
+    "for i in x:\n",
+    "    labels = i['label']\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 2880, 3])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.shape"
    ]
   }
  ],
