Add Cosine Annealing with Decay

--- a/run/train.ipynb
+++ b/run/train.ipynb
@@ -24,6 +24,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning import Trainer\n",
+    "\n",
+    "l = LightningModule()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'training': True,\n",
+       " '_parameters': OrderedDict(),\n",
+       " '_buffers': OrderedDict(),\n",
+       " '_non_persistent_buffers_set': set(),\n",
+       " '_backward_pre_hooks': OrderedDict(),\n",
+       " '_backward_hooks': OrderedDict(),\n",
+       " '_is_full_backward_hook': None,\n",
+       " '_forward_hooks': OrderedDict(),\n",
+       " '_forward_hooks_with_kwargs': OrderedDict(),\n",
+       " '_forward_hooks_always_called': OrderedDict(),\n",
+       " '_forward_pre_hooks': OrderedDict(),\n",
+       " '_forward_pre_hooks_with_kwargs': OrderedDict(),\n",
+       " '_state_dict_hooks': OrderedDict(),\n",
+       " '_state_dict_pre_hooks': OrderedDict(),\n",
+       " '_load_state_dict_pre_hooks': OrderedDict(),\n",
+       " '_load_state_dict_post_hooks': OrderedDict(),\n",
+       " '_modules': OrderedDict(),\n",
+       " 'prepare_data_per_node': True,\n",
+       " 'allow_zero_length_dataloader_with_multiple_devices': False,\n",
+       " '_log_hyperparams': False,\n",
+       " '_dtype': torch.float32,\n",
+       " '_device': device(type='cpu'),\n",
+       " '_trainer': None,\n",
+       " '_example_input_array': None,\n",
+       " '_current_fx_name': None,\n",
+       " '_automatic_optimization': True,\n",
+       " '_param_requires_grad_state': {},\n",
+       " '_metric_attributes': None,\n",
+       " '_compiler_ctx': None,\n",
+       " '_fabric': None,\n",
+       " '_fabric_optimizers': []}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
