--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,18 +6,20 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- 10 fold scheme +\n",
-    "- use 2x batch AND 2x LR +\n",
+    "- different bg_sampling_rate (negative element sampling) + FocalLoss\n",
+    "- different scheduler (CosineLR with mininum LR > 0)\n",
+    "- KLDiv loss\n",
+    "- 10 fold scheme\n",
+    "- use 2x batch AND 2x LR\n",
     "- downsample 3\n",
     "- duration 5728 or 5792\n",
     "- different optimizer (Lion, Adam, SGD)\n",
     "- different scheduler (CyclicLR - triangular2)\n",
-    "- different bg_sampling_rate (negative element sampling) + FocalLoss\n",
+    "\n",
     "- different encoders\n",
     "- different decoders\n",
     "- different models\n",
     "- add weeks or months\n",
-    "- different loss (KL divergence)\n",
     "- different seed (just for fun)\n",
     "- train different folds, build an ensemble of models\n",
     "- use stacking with ensemble\n",
@@ -27,36 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
@@ -97,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_601179/453170642.py:31: UserWarning: \n",
+      "/tmp/ipykernel_13162/453170642.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -131,41 +106,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7591059904987512"
+       "(0.7591452895753379, 24627)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.002, distance=95\n",
-    ")\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds[:, :, [1, 2]], score_th=0.1, distance=95)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
     "\n",
-    "score"
+    "score, len(pred_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def objective(trial: optuna.Trial):\n",
     "    # score_th = 0.005\n",
-    "    score_th = trial.suggest_float(\"score_th\", 0.001, 0.2)\n",
-    "    distance = trial.suggest_int(\"distance\", 1, 200)\n",
+    "    score_th = trial.suggest_float(\"score_th\", 0.05, 0.5)\n",
+    "    distance = trial.suggest_int(\"distance\", 50, 400)\n",
     "\n",
     "    pred_df: pl.DataFrame = post_process_for_seg(\n",
     "        keys, preds[:, :, [1, 2]], score_th=score_th, distance=distance\n",
