Add fold 3 and fold 4

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -7,6 +7,7 @@
     "# Ideas\n",
     "\n",
     "\n",
+    "- try sun again\n",
     "- number of base_filters\n",
     "- upsample, increase 2x\n",
     "\n",
@@ -17,7 +18,6 @@
     "\n",
     "- different encoders\n",
     "- different decoders\n",
-    "- different models\n",
     "\n",
     "- train different folds, build an ensemble of models\n",
     "- use stacking with ensemble\n",
@@ -115,23 +115,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7629146057194132, 47149)"
+       "(0.7622275313873353, 15199)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.0001, distance=90\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.001, distance=90\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
