Add selection of best model by loss or score

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,12 +6,13 @@
    "source": [
     "# Ideas\n",
     "\n",
+    "- train different folds, build an ensemble of models\n",
+    "- try focal loss in ensemble\n",
     "\n",
-    "- try sun again\n",
     "- number of base_filters\n",
     "- upsample, increase 2x\n",
     "\n",
-    "- different mixup / cutmix\n",
+    "- different mixup / cutmix ratio\n",
     "- downsample 3\n",
     "\n",
     "- different optimizer (Lion, Adam, SGD)\n",
@@ -19,7 +20,6 @@
     "- different encoders\n",
     "- different decoders\n",
     "\n",
-    "- train different folds, build an ensemble of models\n",
     "- use stacking with ensemble\n",
     "\n",
     "- different seed (just for fun)\n",
@@ -33,13 +33,12 @@
    "outputs": [],
    "source": [
     "# base 50/0.0005, score_th=0.0001, distance=80 - 0.7614144924290991, 284372\n",
-    "# FL 60/0.0006, score_th=0.1, distance=95 - 0.7630580827401703, 83401 LB \n",
-    "# FL 60/0.0006, score_th=0.01, distance=90 - 0.763428304083275, 383791"
+    "# FL 60/0.0006, score_th=0.1, distance=95 - 0.7630580827401703, 83401 LB "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_offset_20_unetpp\"\n",
+    "EXP_NAME = \"transformer_offset_20_lr_2.5_sun\"\n",
     "RUN_NAME = \"run0\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "\n",
@@ -81,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_119660/4187722850.py:30: UserWarning: \n",
+      "/tmp/ipykernel_17927/2898181085.py:30: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -97,9 +96,11 @@
     }
    ],
    "source": [
+    "type = \"_score\" # '_loss'\n",
+    "\n",
     "cfg = load_config(RESULT_DIR)\n",
-    "preds = np.load(RESULT_DIR / \"preds.npy\")\n",
-    "labels = np.load(RESULT_DIR / \"labels.npy\")\n",
+    "preds = np.load(RESULT_DIR / f\"preds{type}.npy\")\n",
+    "labels = np.load(RESULT_DIR / f\"labels{type}.npy\")\n",
     "keys = np.load(RESULT_DIR / \"keys.npy\")\n",
     "\n",
     "gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\")\n",
@@ -115,23 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7622275313873353, 15199)"
+       "(0.7622579317579237, 75721)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.001, distance=90\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.0001, distance=95\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
