Train on fold 3, CV/LB 0.762/0.726

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Ideas\n",
     "\n",
+    "- sigma 12\n",
     "- train different folds, build an ensemble of models\n",
-    "- try focal loss in ensemble\n",
     "\n",
     "- number of base_filters\n",
     "- upsample, increase 2x\n",
@@ -38,9 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_229893/1373160367.py:31: UserWarning: \n",
+      "The version_base parameter is not specified.\n",
+      "Please specify a compatability version level, or None.\n",
+      "Will assume defaults for version 1.1\n",
+      "  initialize(config_path=config_path.as_posix())\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -60,9 +72,10 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_offset_20_lr_2.5_sun\"\n",
-    "RUN_NAME = \"run0\"\n",
+    "EXP_NAME = \"transformer_5_folds\"\n",
+    "RUN_NAME = \"run3\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
+    "TYPE = \"_loss\"  # '_score'\n",
     "\n",
     "\n",
     "def load_config(result_dir: Path):\n",
@@ -75,32 +88,12 @@
     "    # load the config\n",
     "    cfg = compose(config_name=\"config\")\n",
     "\n",
-    "    return cfg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_17927/2898181085.py:30: UserWarning: \n",
-      "The version_base parameter is not specified.\n",
-      "Please specify a compatability version level, or None.\n",
-      "Will assume defaults for version 1.1\n",
-      "  initialize(config_path=config_path.as_posix())\n"
-     ]
-    }
-   ],
-   "source": [
-    "type = \"_score\" # '_loss'\n",
+    "    return cfg\n",
+    "\n",
     "\n",
     "cfg = load_config(RESULT_DIR)\n",
-    "preds = np.load(RESULT_DIR / f\"preds{type}.npy\")\n",
-    "labels = np.load(RESULT_DIR / f\"labels{type}.npy\")\n",
+    "preds = np.load(RESULT_DIR / f\"preds{TYPE}.npy\")\n",
+    "labels = np.load(RESULT_DIR / f\"labels{TYPE}.npy\")\n",
     "keys = np.load(RESULT_DIR / \"keys.npy\")\n",
     "\n",
     "gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\")\n",
@@ -116,23 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7622579317579237, 75721)"
+       "(0.7636795771649694, 23000)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.0001, distance=95\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.001, distance=70\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
