--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,8 +6,10 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- sigma 12\n",
-    "- train different folds, build an ensemble of models\n",
+    "- what will happen if we delete break from for cycle in get_label function?\n",
+    "\n",
+    "- set sigma=18, duration=8640, return Transformer, UNetPP, also try fold 3, experiment with threshold and distance\n",
+    "- build an ensemble of models from different folds\n",
     "\n",
     "- number of base_filters\n",
     "- upsample, increase 2x\n",
@@ -38,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_229893/1373160367.py:31: UserWarning: \n",
+      "/tmp/ipykernel_229893/2646551991.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -73,7 +75,7 @@
     "plt.style.use(\"ggplot\")\n",
     "\n",
     "EXP_NAME = \"transformer_5_folds\"\n",
-    "RUN_NAME = \"run3\"\n",
+    "RUN_NAME = \"run4\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "TYPE = \"_loss\"  # '_score'\n",
     "\n",
@@ -109,29 +111,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7636795771649694, 23000)"
+       "(0.7390306356172562, 17103)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.001, distance=70\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.001, distance=95\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
     "\n",
     "score, len(pred_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (0.7636795771649694, 23000)"
    ]
   },
   {
