--- a/run/train.ipynb
+++ b/run/train.ipynb
@@ -23,65 +23,65 @@
     "from src.modelmodule.seg import SegModel\n",
     "\n",
     "\n",
-    "# def main(cfg: dict):  # type: ignore\n",
-    "#     seed_everything(cfg.seed)\n",
+    "def main(cfg: dict):  # type: ignore\n",
+    "    seed_everything(cfg.seed)\n",
     "\n",
-    "#     # init lightning model\n",
-    "#     datamodule = SegDataModule(cfg)\n",
-    "#     # LOGGER.info(\"Set Up DataModule\")\n",
-    "#     model = SegModel(\n",
-    "#         cfg, datamodule.valid_event_df, len(cfg.features), len(cfg.labels), cfg.duration\n",
-    "#     )\n",
+    "    # init lightning model\n",
+    "    datamodule = SegDataModule(cfg)\n",
+    "    # LOGGER.info(\"Set Up DataModule\")\n",
+    "    model = SegModel(\n",
+    "        cfg, datamodule.valid_event_df, len(cfg.features), len(cfg.labels), cfg.duration\n",
+    "    )\n",
     "\n",
-    "    # # set callbacks\n",
-    "    # checkpoint_cb = ModelCheckpoint(\n",
-    "    #     verbose=True,\n",
-    "    #     monitor=cfg.monitor,\n",
-    "    #     mode=cfg.monitor_mode,\n",
-    "    #     save_top_k=1,\n",
-    "    #     save_last=False,\n",
-    "    # )\n",
-    "    # lr_monitor = LearningRateMonitor(\"epoch\")\n",
-    "    # progress_bar = RichProgressBar()\n",
-    "    # model_summary = RichModelSummary(max_depth=2)\n",
+    "    # set callbacks\n",
+    "    checkpoint_cb = ModelCheckpoint(\n",
+    "        verbose=True,\n",
+    "        monitor=cfg.monitor,\n",
+    "        mode=cfg.monitor_mode,\n",
+    "        save_top_k=1,\n",
+    "        save_last=False,\n",
+    "    )\n",
+    "    lr_monitor = LearningRateMonitor(\"epoch\")\n",
+    "    progress_bar = RichProgressBar()\n",
+    "    model_summary = RichModelSummary(max_depth=2)\n",
     "\n",
-    "    # trainer = Trainer(\n",
-    "    #     # env\n",
-    "    #     default_root_dir=Path.cwd(),\n",
-    "    #     # num_nodes=cfg.training.num_gpus,\n",
-    "    #     accelerator=cfg.accelerator,\n",
-    "    #     precision=16 if cfg.use_amp else 32,\n",
-    "    #     # training\n",
-    "    #     fast_dev_run=cfg.debug,  # run only 1 train batch and 1 val batch\n",
-    "    #     max_epochs=cfg.epoch,\n",
-    "    #     max_steps=cfg.epoch * len(datamodule.train_dataloader()),\n",
-    "    #     gradient_clip_val=cfg.gradient_clip_val,\n",
-    "    #     accumulate_grad_batches=cfg.accumulate_grad_batches,\n",
-    "    #     callbacks=[checkpoint_cb, lr_monitor, progress_bar, model_summary],\n",
-    "    #     logger=None,\n",
-    "    #     # resume_from_checkpoint=resume_from,\n",
-    "    #     num_sanity_val_steps=0,\n",
-    "    #     log_every_n_steps=int(len(datamodule.train_dataloader()) * 0.1),\n",
-    "    #     sync_batchnorm=True,\n",
-    "    #     check_val_every_n_epoch=cfg.check_val_every_n_epoch,\n",
-    "    # )\n",
+    "    trainer = Trainer(\n",
+    "        # env\n",
+    "        default_root_dir=Path.cwd(),\n",
+    "        # num_nodes=cfg.training.num_gpus,\n",
+    "        accelerator=cfg.accelerator,\n",
+    "        precision=16 if cfg.use_amp else 32,\n",
+    "        # training\n",
+    "        fast_dev_run=cfg.debug,  # run only 1 train batch and 1 val batch\n",
+    "        max_epochs=cfg.epoch,\n",
+    "        max_steps=cfg.epoch * len(datamodule.train_dataloader()),\n",
+    "        gradient_clip_val=cfg.gradient_clip_val,\n",
+    "        accumulate_grad_batches=cfg.accumulate_grad_batches,\n",
+    "        callbacks=[checkpoint_cb, lr_monitor, progress_bar, model_summary],\n",
+    "        logger=None,\n",
+    "        # resume_from_checkpoint=resume_from,\n",
+    "        num_sanity_val_steps=0,\n",
+    "        log_every_n_steps=int(len(datamodule.train_dataloader()) * 0.1),\n",
+    "        sync_batchnorm=True,\n",
+    "        check_val_every_n_epoch=cfg.check_val_every_n_epoch,\n",
+    "    )\n",
     "\n",
-    "    # trainer.fit(model, datamodule=datamodule)\n",
+    "    trainer.fit(model, datamodule=datamodule)\n",
     "\n",
-    "    # # load best weights\n",
-    "    # model = model.load_from_checkpoint(\n",
-    "    #     checkpoint_cb.best_model_path,\n",
-    "    #     cfg=cfg,\n",
-    "    #     val_event_df=datamodule.valid_event_df,\n",
-    "    #     feature_dim=len(cfg.features),\n",
-    "    #     num_classes=len(cfg.labels),\n",
-    "    #     duration=cfg.duration,\n",
-    "    # )\n",
-    "    # weights_path = str(\"model_weights.pth\")  # type: ignore\n",
+    "    # load best weights\n",
+    "    model = model.load_from_checkpoint(\n",
+    "        checkpoint_cb.best_model_path,\n",
+    "        cfg=cfg,\n",
+    "        val_event_df=datamodule.valid_event_df,\n",
+    "        feature_dim=len(cfg.features),\n",
+    "        num_classes=len(cfg.labels),\n",
+    "        duration=cfg.duration,\n",
+    "    )\n",
+    "    weights_path = str(\"model_weights.pth\")  # type: ignore\n",
     "\n",
-    "    # torch.save(model.model.state_dict(), weights_path)\n",
+    "    torch.save(model.model.state_dict(), weights_path)\n",
     "\n",
-    "    # return\n",
+    "    return\n",
     "\n",
     "cfg = yaml.safe_load(Path('conf/train.yaml').read_text())\n",
     "cfg_dir = yaml.safe_load(Path('conf/dir/local.yaml').read_text())\n",
