Increase sigma to 18 and duration to 8640, baseline CV is 0.766

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "- what will happen if we delete break from for cycle in get_label function?\n",
     "\n",
-    "- set sigma=18, duration=8640, return Transformer, UNetPP, also try fold 3, experiment with threshold and distance\n",
+    "- also try fold 3, experiment with threshold and distance\n",
     "- build an ensemble of models from different folds\n",
     "\n",
     "- number of base_filters\n",
