--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -11,6 +11,7 @@
     "- also try fold 3, experiment with threshold and distance\n",
     "- build an ensemble of models from different folds\n",
     "\n",
+    "- different LR\n",
     "- number of base_filters\n",
     "- upsample, increase 2x\n",
     "\n",
