--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_229893/2646551991.py:31: UserWarning: \n",
+      "/tmp/ipykernel_731241/3842839255.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -75,10 +75,10 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_5_folds\"\n",
-    "RUN_NAME = \"run4\"\n",
+    "EXP_NAME = \"sigma_duration_baseline\"\n",
+    "RUN_NAME = \"run0\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
-    "TYPE = \"_loss\"  # '_score'\n",
+    "TYPE = \"_score\"  # '_score'\n",
     "\n",
     "\n",
     "def load_config(result_dir: Path):\n",
@@ -112,23 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7390306356172562, 17103)"
+       "(0.7660430749678366, 30778)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.001, distance=95\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.003, distance=85\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.7636795771649694, 23000)"
+    "# ((0.7580610365147923, 35579)"
    ]
   },
   {
