--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_731241/3842839255.py:31: UserWarning: \n",
+      "/tmp/ipykernel_731241/2867544968.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -72,7 +72,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"sigma_duration_baseline\"\n",
+    "EXP_NAME = \"transformer_dur\"\n",
     "RUN_NAME = \"run0\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "TYPE = \"_score\"  # '_score'\n",
@@ -109,23 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7660430749678366, 30778)"
+       "(0.7709597715463719, 50926)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.003, distance=85\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.0001, distance=85\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
