--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,20 +6,18 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- build an ensemble of models from different folds\n",
+    "- increase sigma to 9, 12, 15, 18\n",
     "\n",
-    "- different LR\n",
     "- number of base_filters\n",
     "- upsample, increase 2x\n",
-    "\n",
     "- different mixup / cutmix ratio\n",
     "- downsample 3\n",
-    "\n",
+    "- gradient_clip_val\n",
     "- different optimizer (Lion, Adam, SGD)\n",
-    "\n",
     "- different encoders\n",
     "- different decoders\n",
     "\n",
+    "- build an ensemble of models from different folds\n",
     "- use stacking with ensemble\n",
     "\n",
     "- different seed (just for fun)\n",
