--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,20 +6,22 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- increase sigma to 9, 12, 15, 18\n",
+    "- with LR / 2\n",
+    "- sigma 15\n",
+    "- offset 25, 30\n",
     "\n",
-    "- number of base_filters\n",
-    "- upsample, increase 2x\n",
-    "- different mixup / cutmix ratio\n",
+    "- different transformer dropout value\n",
+    "- more transformer layers\n",
     "- downsample 3\n",
     "- gradient_clip_val\n",
     "- different optimizer (Lion, Adam, SGD)\n",
-    "- different encoders\n",
-    "- different decoders\n",
+    "\n",
+    "- different encoder type + different encoder backbone\n",
     "\n",
     "- build an ensemble of models from different folds\n",
     "- use stacking with ensemble\n",
     "\n",
+    "- different mixup / cutmix ratio\n",
     "- different seed (just for fun)\n",
     "- select best weights for each train and average them (EMA)"
    ]
@@ -36,14 +38,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_731241/2867544968.py:31: UserWarning: \n",
+      "/tmp/ipykernel_11728/1275128394.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -70,7 +98,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_dur\"\n",
+    "EXP_NAME = \"transformer_dur_8640_sigma_9\"\n",
     "RUN_NAME = \"run0\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "TYPE = \"_score\"  # '_score'\n",
@@ -107,23 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7709597715463719, 50926)"
+       "(0.7761254416785872, 66015)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pred_df: pl.DataFrame = post_process_for_seg(\n",
-    "    keys, preds[:, :, [1, 2]], score_th=0.0001, distance=85\n",
+    "    keys, preds[:, :, [1, 2]], score_th=0.0001, distance=95\n",
     ")\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
