--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -10,18 +10,20 @@
     "- sigma 15\n",
     "- offset 25, 30\n",
     "\n",
-    "- different transformer dropout value\n",
-    "- more transformer layers\n",
-    "- downsample 3\n",
-    "- gradient_clip_val\n",
+    "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN + )\n",
+    "- different decoder type\n",
     "- different optimizer (Lion, Adam, SGD)\n",
     "\n",
-    "- different encoder type + different encoder backbone\n",
+    "- centernet + unetpp\n",
+    "- anglez sin + cos\n",
+    "- fold_10 training\n",
     "\n",
     "- build an ensemble of models from different folds\n",
     "- use stacking with ensemble\n",
     "\n",
+    "- DETR2DCNN\n",
     "- different mixup / cutmix ratio\n",
+    "- gradient_clip_val\n",
     "- different seed (just for fun)\n",
     "- select best weights for each train and average them (EMA)"
    ]
