--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,18 +6,15 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- with LR / 2\n",
-    "- sigma 15\n",
+    "- resnet101, efficientnet-b7\n",
     "- offset 25, 30\n",
+    "- weight decay?\n",
     "\n",
     "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN + )\n",
-    "- different decoder type\n",
+    "- different decoder type (MLP, LSTM)\n",
     "- different optimizer (Lion, Adam, SGD)\n",
     "\n",
-    "- centernet + unetpp\n",
-    "- anglez sin + cos\n",
     "- fold_10 training\n",
-    "\n",
     "- build an ensemble of models from different folds\n",
     "- use stacking with ensemble\n",
     "\n",
