--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -37,40 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_453987/973066844.py:31: UserWarning: \n",
+      "/tmp/ipykernel_453987/3712762865.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -100,7 +74,7 @@
     "EXP_NAME = \"transformer_resnet50\"\n",
     "RUN_NAME = \"single\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
-    "TYPE = \"_score\"  # '_score'\n",
+    "TYPE = \"_loss\"  # '_score'\n",
     "\n",
     "\n",
     "def load_config(result_dir: Path):\n",
@@ -134,22 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7801176549194848, 68458)"
+       "(0.7739580376570818, 68156)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0001, distance=95)\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0002, distance=95)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
